@@ -5,13 +5,12 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-
 import java.io.IOException;
-import java.util.Collections;
-
+import java.util.*;
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
@@ -35,10 +34,12 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             // 3. On demande à JwtUtil si le token est vrai et non expiré
             if (jwtUtil.isTokenValid(token)) {
                 String email = jwtUtil.extractUsername(token);
-                
-                // 4. On donne le feu vert à Spring Security !
-                UsernamePasswordAuthenticationToken authentication = 
-                    new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
+                String role = jwtUtil.extractRole(token);
+
+                List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+
+                UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(email,
+                        null, authorities);
 
                 SecurityContextHolder.getContext().setAuthentication(authentication);
             }
